--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
        </section> 
       
       <!-- клиент -->
-             <figure class="figure">
+             <section class="figure">
                <div class="container">
       <h3 class="figure-client">Постоянные клиенты</h3>
         <ul class="client">
@@ -317,7 +317,7 @@
         </ul> 
       
       </div>
-       </figure>
+       </section>
       </main> 
     <!--Подвал-->
    <footer class="adv">
@@ -338,28 +338,28 @@
            <h4 class="accession">присоединяйтесь</h4>
         <ul class="footer-social-are">
           <li>
-            <a class="instagram" href="/" >
+            <a class="instagram-connexion" href="/" >
              <svg class="link-instagram" width="20px" heidht="20px" >
               <use href="./images/sprite.svg#icon-instagram-2"></use>
             </svg>
            </a>
          </li>
          <li>
-           <a class="twitter" href="/"> 
+           <a class="twitter-connexion" href="/"> 
              <svg class="link-twitter" width="20px" heidht="20px">
              <use href="./images/sprite.svg#icon-twitter-1"></use>
            </svg>
           </a> 
          </li>
          <li>
-          <a class="facebook" href="/" >
+          <a class="facebook-connexion" href="/" >
            <svg class="link-facebook" width="20px" heidht="20px" >
             <use href="./images/sprite.svg#icon-facebook-1"></use>
           </svg>
          </a>
        </li>
        <li>
-        <a class="linkedin" href="/" >
+        <a class="linkedin-connexion" href="/" >
          <svg class="link-linkedin" width="20px" heidht="20px" >
           <use href="./images/sprite.svg#icon-linkedin-1"></use>
         </svg>
