--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
               
         <ul class="spreadsheet" >
 
-          <li class="ticket" >
-         <a href="">
+          <li class="ticket">
+         <a class="bbb" href="">
            <img src="./Portfolio/img.jpg" alt="Открытый Macbook" width="370"/>
            <div class="internal-block" >
                 <h4 class="title" >Технокряк</h4>
@@ -68,7 +68,7 @@
           </li>
           <li class="ticket">
            
-               <a href="">
+               <a class="bbb" href="">
                  <img src="./Portfolio/img-(1).jpg" alt="Баскетболисты и мяч" width="370">
                  <div class="internal-block" >
                 <h4 class="title">Постер New Orlean vs Golden Star</h4>
@@ -77,7 +77,7 @@
               </a>   
           </li>
           <li class="ticket">
-           <a href=""> 
+           <a class="bbb" href=""> 
              <img src="./Portfolio/img-(2).jpg" alt="Логотип ресторана Seafood" width="370">
             <div class="internal-block" >
             <h4 class="title">Ресторан Seafood</h4>
@@ -86,7 +86,7 @@
           </a>
           </li>
           <li class="ticket">
-         <a href="">
+         <a class="bbb" href="">
            <img src="./Portfolio/img-(3).jpg" alt="Наушники" width="370"> 
            <div class="internal-block" >
           <h4 class="title">Проект Prime</h4>
@@ -95,7 +95,7 @@
         </a>
           </li>
           <li class="ticket">
-          <a href=""> 
+          <a class="bbb" href=""> 
             <img src="./Portfolio/img-(4).jpg" alt="Коробки" width="370"> 
             <div class="internal-block" >
             <h4 class="title">Проект Boxes</h4>
@@ -104,7 +104,7 @@
           </a>
           </li>
           <li class="ticket">
-          <a href=""> 
+          <a class="bbb" href=""> 
             <img src="./Portfolio/img-(5).jpg" alt="Монитор компютера" width="370"/>
              <div class="internal-block" >
             <h4 class="title">Inspiration has no Borders</h4>
@@ -113,7 +113,7 @@
       </a>      
           </li>
           <li class="ticket">
-           <a href="">
+           <a class="bbb" href="">
              <img src="./Portfolio/img-(6).jpg" alt="Открытая книга" width="370"/> 
             <div class="internal-block" >
             <h4 class="title">Издание Limited Edition</h4>
@@ -122,7 +122,7 @@
           </a>
           </li>
           <li class="ticket">
-          <a href="">
+          <a class="bbb" href="">
              <img src="./Portfolio/img-(7).jpg" alt="Бирка" width="370">
              <div class="internal-block" >
             <h4 class="title">Growing Business</h4>
@@ -131,7 +131,7 @@
           </a>
           </li>
           <li class="ticket">
-           <a href=""> 
+           <a class="bbb" href=""> 
              <img src="./Portfolio/img-(8).jpg" alt="Открытый ноутбук" width="370">
                 <div class="internal-block" >
                 <h4 class="title">Growing Business</h4>
